# godot-myaddon

./: .clang-format  .clang-tidy  CMakeLists.txt
myaddon/: CMakeLists.txt
myaddon/src/: movement.cpp  movement.h  register_types.cpp  register_types.h
